kustomize/applications/tensorboard/tensorboard-web-app/base/patches/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tensorboards-web-app-tensorboards-web-app
spec:
  gateways:
  - ingress-kubeflow/ingress-kubeflow-istio-ingress-gateway-https
