kustomize/applications/tensorboard/tensorboard-web-app/base/patches/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: tensorboards-web-app
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/ingress-kubeflow/sa/ingress-kubeflow
  selector:
    matchLabels:
      app: tensorboards-web-app
